<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.semwal.amit.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps"
        android:fontFamily="sans-serif-medium"
        android:textSize="32sp"
        android:id="@+id/textView"

        android:layout_marginTop="@dimen/margin"

        android:layout_weight="2"/>

    <Button
        android:layout_width="200dp"
        android:width="36dp"


        android:layout_marginTop="@dimen/margin"
        android:background="#9C27B0"
        android:layout_height="wrap_content"
        android:text="@string/project1"
        android:id="@+id/button1"
        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:width="36dp"
        android:layout_marginTop="@dimen/margin"
        android:background="#9C27B0"
        android:layout_height="wrap_content"
        android:text="@string/project2"
        android:id="@+id/button2"
        android:layout_weight="1" />

    <Button
        android:layout_width="200dp"
        android:width="36dp"
        android:background="#9C27B0"
        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content"
        android:text="@string/project3"
        android:id="@+id/button3"

        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:width="36dp"
        android:background="#9C27B0"
        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content"
        android:text="@string/project4"
        android:id="@+id/button4"
        android:layout_weight="1"
        />

    <Button
        android:layout_width="200dp"
        android:width="36dp"
        android:background="#9C27B0"


        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content"
        android:text="@string/project5"
        android:id="@+id/button5"

        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:width="36dp"
        android:background="#B71C1C"
        android:layout_marginBottom="64dp"

        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content"
        android:text="@string/project6"
        android:id="@+id/button6"
        android:layout_weight="1"/>


</LinearLayout>
